--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "hapi": "^17.5.4"
-    }
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "hapi": "17.5.4"
+  }
 }
